--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,24 @@ hr{
 }
 
 
+/*skip link*/
+.screenreaderText {
+    position: absolute;
+    left: -999px;
+    width: 1px;
+    height: 1px;
+    top: auto;
+  }
+  .screenreaderText:focus {
+    color: black;
+    display: inline-block;
+    height: auto;
+    width: auto;
+    position: static;
+    margin: auto;
+  }
+
+
 
 /* MOBILE DEV*/
 
